--- a/test-bahai-web-protocol.html
+++ b/test-bahai-web-protocol.html
@@ -25,8 +25,9 @@
             "protocol, a protocol which allows you to visit links which will direct you to "+
             "whatever Bah\u00e1'\u00ed Writings tool you prefer, so you will be redirected to "+
             "a default we have specified at bahai-library.com . You may, however, click cancel "+
-            "to stay on this page and choose the protocol suggested by this page",
-        fallbacks : {
+            "to stay on this page and choose the protocol suggested by this page"
+        },
+        {fallbacks : {
             abl: [
                 {"Bah\u00e1'\u00ed Reference Library" : "http://reference.bahai.org/en/t/ab/ABL/abl-4.html#pg22"}, 
                 {"Bah\u00e1'\u00ed Library Online": "http://bahai-library.com/writings/abdulbaha/abl/abdulbahalondon.html#22"}
