--- a/test-bahai-web-protocol.html
+++ b/test-bahai-web-protocol.html
@@ -16,6 +16,7 @@
         scheme : 'web+bahaiwritings',
         name : "Bahá'í Writings Access Protocol",
         handler_url : 'http://bahai-library.com/test-bahai-web-protocol/index.php?q=%s',
+        test_handler_url: 'http://bahai-library.com/test-bahai-web-protocol/test-bahai-web-protocol.html',
         not_supported_message : 
             "Your browser does not support protocol registration, something which we would use to "+
             "allow you to make your own choice about which website you would wish to use to visit "+
