- Switch to https

--- a/test-bahai-web-protocol.html
+++ b/test-bahai-web-protocol.html
@@ -30,15 +30,15 @@
         {fallbacks : {
           abl: [
             {"Bah\u00e1'\u00ed Reference Library":
-                "http://reference.bahai.org/en/t/ab/ABL/abl-4.html#pg22"},
+                "https://reference.bahai.org/en/t/ab/ABL/abl-4.html#pg22"},
             {"Bah\u00e1'\u00ed Library Online":
-                "http://bahai-library.com/writings/abdulbaha/abl/abdulbahalondon.html#22"}
+                "https://bahai-library.com/writings/abdulbaha/abl/abdulbahalondon.html#22"}
           ],
           ka: [
             {"Bah\u00e1'\u00ed Reference Library":
-                "http://reference.bahai.org/en/t/b/KA/ka-4.html#gr15"},
+                "https://reference.bahai.org/en/t/b/KA/ka-4.html#gr15"},
             {"Bah\u00e1'\u00ed Library Online":
-                "http://bahai-library.com/writings/bahaullah/aqdas/kaall.html#par15"}
+                "https://bahai-library.com/writings/bahaullah/aqdas/kaall.html#par15"}
           ]
         }}
     );
@@ -77,12 +77,12 @@
   <ul>
       <li><i>Kitáb-i-Aqdas</i>, par.
           <a data-default-href="web+bahaiwritings:en:ka:15"
-                href="http://bahai-library.com/writings/bahaullah/aqdas/kaall.html#par15"
+                href="https://bahai-library.com/writings/bahaullah/aqdas/kaall.html#par15"
                 data-context-key="ka">15</a>
       </li>
       <li><i>'Abdu'l-Bahá in London</i>, p.
           <a data-default-href="web+bahaiwritings:en:abl:22"
-                href="http://bahai-library.com/writings/abdulbaha/abl/abdulbahalondon.html#22"
+                href="https://bahai-library.com/writings/abdulbaha/abl/abdulbahalondon.html#22"
                 data-context-key="abl">22</a>
     </li>
   </ul>
