- Fix: Redirect - Fix: Ensure test uses paragraph

--- a/test-bahai-web-protocol.html
+++ b/test-bahai-web-protocol.html
@@ -68,7 +68,7 @@
   <p>The following link directly (and only) using the
       <code>web+bahaiwritings</code> protocol.</p>
   <ul>
-      <li><i>Kitáb-i-Aqdas</i>, par. <a href="web+bahaiwritings:en:ka:15">15</a></li>
+      <li><i>Kitáb-i-Aqdas</i>, par. <a href="web+bahaiwritings:en:ka:15:par">15</a></li>
       <li><i>'Abdu'l-Bahá in London</i>, p. <a href="web+bahaiwritings:en:abl:22">22</a></li>
   </ul>
 
@@ -76,7 +76,7 @@
     alternative explicit choices):</p>
   <ul>
       <li><i>Kitáb-i-Aqdas</i>, par.
-          <a data-default-href="web+bahaiwritings:en:ka:15"
+          <a data-default-href="web+bahaiwritings:en:ka:15:par"
                 href="https://bahai-library.com/writings/bahaullah/aqdas/kaall.html#par15"
                 data-context-key="ka">15</a>
       </li>
