- Link demo back to repo

--- a/test-bahai-web-protocol.html
+++ b/test-bahai-web-protocol.html
@@ -89,5 +89,7 @@
 
   <button id="addRegisterListener">Register protocol handler</button>
 
+  <p><i>Get the <a href="https://github.com/brettz9/bahai-writings-handler">source code</a>.</i></p>
+
 </body>
 </html>
